--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
+    "boxicons": "^2.1.4",
+    "echarts-for-react": "^3.0.2",
     "popper.js": "^1.16.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "remixicon": "^3.5.0",
+    "remixicon-react": "^1.0.0",
+    "simple-datatables": "^8.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/quill": "^2.0.13"
   }
 }
