--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.0",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "boxicons": "^2.1.4",
