--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.14",
-    "@mui/material": "^5.14.14",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@tinymce/tinymce-react": "^4.3.0",
-    "axios": "^1.6.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@tinymce/tinymce-react": "^4.3.1",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "boxicons": "^2.1.4",
@@ -19,14 +19,15 @@
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-validation": "^3.0.7",
     "remixicon": "^3.5.0",
     "remixicon-react": "^1.0.0",
-    "simple-datatables": "^8.0.0",
-    "web-vitals": "^2.1.4"
+    "simple-datatables": "^8.0.1",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,6 +55,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/quill": "^2.0.13"
+    "@types/quill": "^2.0.14"
   }
 }
