--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.11.1",
     "boxicons": "^2.1.4",
     "echarts-for-react": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "popper.js": "^1.16.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
